# AdventOfCode

./: .gitignore  README.md
2021/: 12-graph.gv.txt  README.md  _template.py  j_aoc_common.py  sol_1.py  sol_10.py  sol_11.py  sol_12.py  sol_13.py  sol_14.py  sol_15.py  sol_16.py  sol_17.py  sol_2.py  sol_21.py  sol_2_py39.py  sol_3.py  sol_4.py  sol_5.py  sol_6.py  sol_7.py  sol_8.py  sol_9.py  viz_9.py
2021/template_test/: test.py  test_template.py
2022/: Cargo.toml  README.md  d1.py  d10.py  d11.py  d12.py  d13.py  d15.py  d18.py  d2.py  d20.py  d21.py  d22.py  d25.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py  viz22.py
2022/src/: d1.rs  d2.rs  d3.rs  d4.rs
