[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["Jędrzej Pacanowski"]

[dependencies]


# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
[[bin]]
name = "day01"
path = "src/d1.rs"
#test = true
